fix: correct home stylesheet paths and invalid scrollbar rules

--- a/css/pages/building-instructions.css
+++ b/css/pages/building-instructions.css
@@ -1,15 +1,3 @@
-@font-face {
-  font-family: Cera Pro;
-  src: url(../../assets/global/fonts/CeraPro-Regular.woff2);
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: Cera ProBold;
-  src: url(../../assets/global/fonts/CeraPro-Bold.woff2);
-  font-weight: bold;
-  font-style: normal;
-}
 body {
   font-family: "Cera Pro", sans-serif;
 }
